--- a/login.html
+++ b/login.html
@@ -204,6 +204,7 @@
             display: flex;
             align-items: center;
             gap: var(--space-sm);
+            line-height: 1.5;
         }
 
         .checkbox-group input[type="checkbox"] {
@@ -211,18 +212,30 @@
             height: 18px;
             accent-color: var(--primary-gold);
             cursor: pointer;
+            margin: 0;
+            flex-shrink: 0;
         }
 
         .checkbox-group label {
             color: var(--text-secondary);
             font-size: 0.9rem;
             cursor: pointer;
+            margin: 0;
+            line-height: 1.5;
+            display: flex;
+            align-items: center;
         }
 
-        .forgot-link {
+        .form-options .forgot-link {
             color: var(--primary-gold);
             font-size: 0.9rem;
             text-decoration: none;
+            line-height: 1.5;
+            white-space: nowrap;
+            min-width: 0 !important;
+            min-height: 0 !important;
+            width: auto !important;
+            height: auto !important;
         }
 
         .forgot-link:hover {
@@ -332,6 +345,9 @@
         </div>
     </div>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script>
         function togglePassword(inputId) {
             const input = document.getElementById(inputId);
@@ -345,6 +361,18 @@
                 icon.classList.replace('bi-eye-slash', 'bi-eye');
             }
         }
+
+        // Initialize dark mode for login page
+        document.addEventListener('DOMContentLoaded', function () {
+            // Check for saved dark mode preference or default to dark
+            const savedMode = localStorage.getItem('darkMode');
+            const isDark = savedMode === null ? true : savedMode === 'true';
+
+            // Apply saved mode
+            if (!isDark) {
+                document.body.classList.add('light-mode');
+            }
+        });
 
         document.getElementById('loginForm').addEventListener('submit', function (e) {
             e.preventDefault();
