--- a/signup.html
+++ b/signup.html
@@ -244,20 +244,25 @@
             height: 18px;
             accent-color: var(--primary-gold);
             cursor: pointer;
-            margin-top: 0;
+            margin: 0;
             flex-shrink: 0;
+            align-self: center;
         }
 
         .checkbox-group label {
             color: var(--text-secondary);
             font-size: 0.9rem;
             cursor: pointer;
+            margin: 0;
             line-height: 1.5;
+            flex: 1;
         }
 
         .checkbox-group a {
             color: var(--primary-gold);
             text-decoration: none;
+            line-height: inherit;
+            vertical-align: baseline;
         }
 
         .checkbox-group a:hover {
@@ -375,7 +380,7 @@
                     <div class="checkbox-group">
                         <input type="checkbox" id="agreeTerms" required>
                         <label for="agreeTerms">
-                            I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>
+                            I agree to the <a href="#">Terms</a> and <a href="#">Privacy</a>
                         </label>
                     </div>
 
@@ -410,6 +415,9 @@
         </div>
     </div>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script>
         function togglePassword(inputId) {
             const input = document.getElementById(inputId);
@@ -436,6 +444,18 @@
                 bar.classList.add('strong');
             }
         }
+
+        // Initialize dark mode for signup page
+        document.addEventListener('DOMContentLoaded', function () {
+            // Check for saved dark mode preference or default to dark
+            const savedMode = localStorage.getItem('darkMode');
+            const isDark = savedMode === null ? true : savedMode === 'true';
+
+            // Apply saved mode
+            if (!isDark) {
+                document.body.classList.add('light-mode');
+            }
+        });
 
         document.getElementById('signupForm').addEventListener('submit', function (e) {
             e.preventDefault();
