--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="sq">
 
 <head>
@@ -87,7 +87,7 @@
       .stats-section .hero-stats {
         gap: var(--space-2xl);
       }
-      
+
       .stats-section .stat-item:not(:last-child)::after {
         display: none;
       }
@@ -121,9 +121,9 @@
         <li><a href="contact.html" class="nav-link">Contact</a></li>
         <!-- Mobile Nav Actions -->
         <div class="mobile-nav-actions">
-          <a href="login.html" class="btn btn-nav-outline">Login</a>
-          <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
-          <a href="live.html" class="btn-join-live">Join Live</a>
+                    <a href="dashboard.html" class="btn btn-nav-outline"><i class="bi bi-speedometer2"></i> Dashboard</a>
+                    <a href="login.html" class="btn btn-nav-outline">Login</a>
+                    <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
         </div>
       </ul>
 
@@ -141,6 +141,7 @@
         <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
           <i class="bi bi-sun-fill"></i>
         </button>
+        <a href="dashboard.html" class="btn btn-nav-outline"><i class="bi bi-speedometer2"></i> Dashboard</a>
         <a href="login.html" class="btn btn-nav-outline">Login</a>
         <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
         <a href="live.html" class="btn-join-live">Join Live</a>
@@ -163,7 +164,8 @@
           Live Auctions Now
         </span>
         <h1 class="hero-title hero-title-dark">
-          Live Auctions with <span style="white-space: nowrap;"><span class="text-dark-accent">Real-Time</span> Bidding</span>
+          Live Auctions with <span style="white-space: nowrap;"><span class="text-dark-accent">Real-Time</span>
+            Bidding</span>
         </h1>
         <p class="hero-description hero-description-dark">
           “A curated Albanian auction marketplace for verified luxury, fine art, antiques, and rare collectibles.”
