--- a/auction-detail.html
+++ b/auction-detail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="sq">
 
 <head>
@@ -36,9 +36,9 @@
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <!-- Mobile Nav Actions -->
                 <div class="mobile-nav-actions">
+                    <a href="dashboard.html" class="btn btn-nav-outline"><i class="bi bi-speedometer2"></i> Dashboard</a>
                     <a href="login.html" class="btn btn-nav-outline">Login</a>
                     <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
-                    <a href="live.html" class="btn-join-live">Join Live</a>
                 </div>
             </ul>
 
@@ -56,6 +56,7 @@
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
                     <i class="bi bi-sun-fill"></i>
                 </button>
+                <a href="dashboard.html" class="btn btn-nav-outline"><i class="bi bi-speedometer2"></i> Dashboard</a>
                 <a href="login.html" class="btn btn-nav-outline">Login</a>
                 <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                 <a href="live.html" class="btn-join-live">Join Live</a>
