--- a/shipping-info.html
+++ b/shipping-info.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="sq">
 
 <head>
@@ -34,9 +34,9 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <div class="mobile-nav-actions">
+                    <a href="dashboard.html" class="btn btn-nav-outline"><i class="bi bi-speedometer2"></i> Dashboard</a>
                     <a href="login.html" class="btn btn-nav-outline">Login</a>
                     <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
-                    <a href="live.html" class="btn-join-live">Join Live</a>
                 </div>
             </ul>
             <a href="index.html" class="navbar-brand">
@@ -50,6 +50,7 @@
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
                     <i class="bi bi-sun-fill"></i>
                 </button>
+                <a href="dashboard.html" class="btn btn-nav-outline"><i class="bi bi-speedometer2"></i> Dashboard</a>
                 <a href="login.html" class="btn btn-nav-outline">Login</a>
                 <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                 <a href="live.html" class="btn-join-live">Join Live</a>
